@@ -2,8 +2,8 @@ project(LIBKTORRENT)
 find_package(KDE4 REQUIRED)
 find_package(KDE4Internal REQUIRED)
 find_package(GMP REQUIRED)
-find_package(QCA2 REQUIRED)
 find_package(Boost REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 # set some default settings
 include(KDE4Defaults)
