@@ -21,13 +21,9 @@
 #define BTSHA1HASHGEN_H
 
 #include <ktorrent_export.h>
+#include <openssl/sha.h>
 #include "constants.h"
 #include "sha1hash.h"
-
-namespace QCA
-{
-	class Hash;
-}
 
 namespace bt
 {
@@ -44,15 +40,6 @@ namespace bt
 	*/
 	class KTORRENT_EXPORT SHA1HashGen
 	{
-		Uint32 h0;
-		Uint32 h1;
-		Uint32 h2;
-		Uint32 h3;
-		Uint32 h4;
-		Uint8 tmp[64];
-		Uint32 tmp_len;
-		Uint32 total_len;
-		QCA::Hash* hash;
 	public:
 		SHA1HashGen();
 		~SHA1HashGen();
@@ -88,8 +75,10 @@ namespace bt
 		 * Get the hash generated.
 		 */
 		SHA1Hash get() const;
+		
 	private:
-		void processChunk(const Uint8* c);
+		SHA_CTX ctx;
+		Uint8 result[20];
 	};
 
 }
